<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/jongkok"/>
        </FrameLayout>
        <TextView
            android:id="@+id/tv_detail_view"
            style="@style/TextDetail.HeadlineMedium.Bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/view"/>
        <Button
            android:layout_marginTop="16dp"
            style="@style/ButtonGeneral.SecondaryVariant"
            android:text="@string/play"/>
        <TextView
            android:id="@+id/tv_title_detail_song"
            style="@style/TextDetail.HeadlineMedium.Bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/song_name"/>
        <TextView
            android:id="@+id/tv_auth_detail_song"
            style="@style/TextDetail.HeadlineMedium"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:text="@string/auth_song" />
        <TextView
            style="@style/TextDetail.HeadlineMedium"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:text="@string/title_description" />
        <TextView
            android:id="@+id/tv_detail_description"
            style="@style/TextDetail.BodyMedium.Gray.MarginLeftRight"
            android:text="@string/description"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textSize="16dp"/>
    </LinearLayout>
</ScrollView>